--- a/style.css
+++ b/style.css
@@ -409,6 +409,10 @@ span {
     }
 
     section {
+        padding: 10rem 3%;
+    }
+
+    .services {
         padding: 7rem;
     }
 
@@ -429,6 +433,8 @@ span {
     #menu-icon {
         display: block;
     }
+
+
 
     .navbar {
         position: absolute;
