--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ span {
     border: .2rem solid var(--bg-color);
     transition: .5s ease;
     color: white;
+
 }
 
 .services-container .services-box:hover {
@@ -240,6 +241,10 @@ span {
 .services-box p {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .portfolio {
